# contactFrictionSim

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  README.md  main.cpp  mainwindow.ui
glsl/: basicShader.frag  basicShader.vert  spring.frag  spring.vert
include/collision/: CollisionDetect.h  Geometry.h
include/contact/: Contact.h
include/rigidbody/: RigidBody.h  RigidBodySystem.h  Scenarios.h
include/solvers/: SolverBoxBPP.h  SolverBoxPGS.h  SolverPROX.h
include/util/: MeshAssets.h  MeshUtils.h  OBJLoader.h
include/viewer/: RigidBodyRenderer.h  ShaderVars.h  SimViewer.h
resources/: box.mtl  bunny.mtl  plane.mtl  sphere.mtl
src/collision/: CollisionDetect.cpp
src/contact/: Contact.cpp
src/rigidbody/: RigidBody.cpp  RigidBodySystem.cpp
src/solvers/: SolverBoxBPP.cpp  SolverBoxPGS.cpp  SolverPROX.cpp
src/util/: MeshAssets.cpp  OBJLoader.cpp
src/viewer/: RigidBodyRenderer.cpp  SimViewer.cpp
